base/istio/gateway-api/httproute-leave-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: leave-service
  labels:
    app.kubernetes.io/name: leave-service
    app.kubernetes.io/part-of: hrms
spec:
  parentRefs:
    - name: hrms-gateway
      namespace: istio-system
  hostnames:
    - "*"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/api/v1/leaves"
      backendRefs:
        - name: leave-service
          port: 80
